Visibility fixed

--- a/about.css
+++ b/about.css
@@ -2,6 +2,9 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
+html {
+    scroll-behavior: smooth;
+}
 .header {
     display: block;
     height: 100px;
@@ -32,7 +35,7 @@
 }
 .left a {
     text-decoration: none;
-    color: rgb(190, 190, 190);
+    color: black;
 }
 ul {
     list-style-type: none;
@@ -41,11 +44,10 @@ li {
     text-align: center;
     padding: 3px;
     border: 1px solid rgb(148, 148, 148);
-    border-radius: 4px;
+    border-radius: 5px;
     line-height: 25px;
 }
 li:hover {
-    color: black;
     border-color: black;
 }
 .partheading {
@@ -68,6 +70,12 @@ li:hover {
     .left {
         width: 100%;
         padding-left: 25%;
+        background-image: url(lemon.png);
+        background-size: cover;
+        border-radius: 10px;
+    }
+    li {
+        background-color: rgba(255,255,255, 0.6);
     }
     .left li {
         width: 50%;
